--- a/src/components/DealForm/styles.css
+++ b/src/components/DealForm/styles.css
@@ -2,6 +2,11 @@
     font-size: 24px;
 }
 
+.table-deals {
+    margin-top: 20px;
+    margin-bottom: 40px;
+}
+
 li.deal-item {
     background: #fff;
     box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.02);
